Fix off-center homepage

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@
     color: rgb(13, 54, 84)
 }
 
+main {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
 body {
     height: 100%;
     background: linear-gradient(#d5eef6, #ffffff);
